cambios que agregamos al sitio web

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <p>
-        This is my new landing page
+        This is my new landing page, follow me in ig: @sdariza
     </p>
 </body>
 </html>
